<resources>
    <string name="app_name">Login Application</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="user_profile">User Profile</string>
    <string name="intro_message">Intro message</string>
    <string name="title_activity_user_detail">UserDetailActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
</resources>